Stop zoom bar from wrapping on Firefox

--- a/sass/_zoom-bar.scss
+++ b/sass/_zoom-bar.scss
@@ -42,11 +42,13 @@
             bottom: 15px;
         }
         label{
+            display: flex;
+            align-items: baseline;
             flex-basis: calc(100% - #{$zoom_bar_button_container_width});
             margin-bottom: 0;
         }
         input[type="range"]{
-            width: calc(100% - 138px);
+            flex-basis: calc(100% - 138px);
         }
     }
     .zoom-bar-fit-button{
